https://inter-mediator.org/
=================================

Change Log will be supplied by English only.
Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  https://inter-mediator.info/ja/for-developers/migration.html

Ver.15 (in Development)
- In case of affecting the order of records with editing field data, the list is going to update after modification.
- New prompt for the related table adding are added to /dist-docs/prompts.
- The new class RESTAPI can publish the Web API from a definition file. The sample usage is in the sample/Sample_API.
- [Bug Fix]On version 12, INTERMediator.clearCondition method clears page number of pagination in any case.
  INTERMediator.clearCondition should be cleared any parameter, just clears all conditions.
- The default value of the INTERMediatorLog.suppressDebugMessageOnPage is changed from false to true.
  The debug messages on the page is going to be deprecated.

Ver.14 (June 16, 2025)
- From this version, minimum supporting PHP version is 8.1.
- Add support for PHP 8.4.
- FX.php has code that using deprecated way in PHP 8.4, and various adjustments would be needed to make it work with
  PHP 8. However, there are currently no new projects using FX.php, we will discontinue support for FX.php and CWPKit.
- The prompt for LLM-based AI programming is added to /dist-docs/promputs. You can try it with Windsurf.
- Charting feature is implemented with chart.js. The new html attribute data-im-widget-alone has to be used for charging,
  and the value should be as like "chartjs@saleslog|bar|customer|数量,単価|qty,unitprice". The sample is
  /sample/Sample_webpage/char_MySQL.*.
- Authentication with My Number Card is implemented as a provider for OAuth2. The sample code is another repository:
  https://github.com/INTER-Mediator/IMTesting_MyNumberCard.