@@ -1,0 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>INTER-Mediator:Passkey Demo</title>
+    <script src="../../index.php"></script>
+</head>
+<body>
+<h1>Passkey Registration</h1>
+<p>Here is your information.</p>
+<table>
+    <tr>
+        <th>id</th>
+        <td><span data-im="authuser@id"></span></td>
+    </tr>
+    <tr>
+        <th>username</th>
+        <td><span data-im="authuser@username"></span></td>
+    </tr>
+    <tr>
+        <th>realname</th>
+        <td><span data-im="authuser@realname"></span></td>
+    </tr>
+    <tr>
+        <th>publickey</th>
+        <td>
+            <span data-im="authuser@pkexist@style.display">
+                Passkey is already registered.<br>
+            </span>
+            <span data-im="authuser@pknotexist@style.display">
+                Passkey is not registered.<br>
+                <button onclick="IMLibAuthenticationUI.passkeyRegistration()">Register Passkey</button>
+            </span>
+        </td>
+    </tr>
+    <tr>
+        <th></th>
+        <td>
+            <button onclick="IMLibAuthentication.logout();location.reload();">Logout</button>
+        </td>
+    </tr>
+</table>
+</body>
+</html>
